[metadata]
name = pkimplode
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH-libs/pkimplode.py
description = Python bindings to libimplode which is a ripped out part of pkglib which is a Free Open-Source implementation of PKWare Data Compression Library (DCL) compression format, which itself was ripped out of StormLib by Ladislav Zezula.
long_description = file: ReadMe.md
keywords = blast, PKWare, bindings, compression, DCL, implode
license = MIT
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Approved
	License :: OSI Approved :: MIT
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
install_requires = 
	pklib_base  # @ git+https://github.com/implode-compression-impls/pklib_base.py.git
tests_require = pkblast; fileTestSuite @ git+https://github.com/fileTestSuite/fileTestSuite.py
